// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorsSectionContainer component should render default view 1`] = `
<Context.Provider
  value={
    {
      "formValues": {
        "isNtro": false,
      },
    }
  }
>
  <Memo(AuthorsSection)
    isNtro={false}
  />
</Context.Provider>
`;

exports[`AuthorsSectionContainer component should render disabled view 1`] = `
<Context.Provider
  value={
    {
      "formValues": {
        "isNtro": false,
      },
    }
  }
>
  <Memo(AuthorsSection)
    disabled={true}
    isNtro={false}
  />
</Context.Provider>
`;
